MyProjetcs/P1-Kittens-carousel/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This Cloudformation Template was written for running Kittens Carousel Static Website on EC2. This website will be deployed on Linux 2 (ami-0742b4e673072066f) EC2 instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static website is dowloaded from Public Github repository, then deployed on Apache Web Server.
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server an SSH.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80 
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22 
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-048f6ed62451373d9
      InstanceType: t2.micro
      KeyName: Firstkey
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData:
        Fn::Base64:
          !Sub | 
            #! /bin/bash
            yum update -y
            yum install httpd -y
            FOLDER="https://raw.githubusercontent.com/kmlhtpgl/aws-devops/main/MyProjetcs/P1-Kittens-carousel/static-web"
            cd /var/www/html
            wget $FOLDER/index.html
            wget $FOLDER/cat0.jpg
            wget $FOLDER/cat1.jpg
            wget $FOLDER/cat2.jpg
            wget $FOLDER/cat3.png
            systemctl start httpd
            systemctl enable httpd


Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
